--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Montres de luxe - Rolex</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <h1>Bienvenue sur mon site de montres Rolex</h1>
